# isw421-cpp-playbook

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt
source/bases/: conditions.cpp  conditions.h  lambdas.cpp  lambdas.h  pointers.cpp  pointers.h  references.cpp  references.h
